--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <div class="cta-card">
         <div class="cta-inner">
           <div class="cta-text">
-            Over <b>5L+ devotees</b> already receive flowers at home and get reminders. Start now to manage pooja <span
+            Over <b>1000 + devotees</b> already receive flowers at home and get reminders. Start now to manage pooja <span
               class="cta-em">3× easier</span>!
           </div>
           <div class="badge-row">
