--- a/index.html
+++ b/index.html
@@ -459,11 +459,11 @@
         </div>
         <div class="footer-badges">
           <a class="app-badge" href="https://play.google.com/store/apps/details?id=com.thirtythreecroresapp&hl=en"
-            target="_blank" rel="noopener noreferrer" aria-label="Get it on Google Play">
+            target="_blank" rel="noopener noreferrer" aria-label="Get it on Google Play" style="width: 150px">
             <img src="img/google.png" alt="Get it on Google Play" />
           </a>
           <a class="app-badge" href="https://apps.apple.com/in/app/33-crores/id6443912970" target="_blank"
-            rel="noopener noreferrer" aria-label="Download on the App Store">
+            rel="noopener noreferrer" aria-label="Download on the App Store" style="width: 150px">
             <img src="img/ios.png" alt="Download on the App Store" />
           </a>
         </div>
