--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     .app-badge img {
       display: block;
       width: 180px;
-      height: auto;
+      height: 100%;
     }
 
     /* MOBILE — ensure both badges visible without scrolling */
@@ -385,7 +385,7 @@
   <section class="hero">
     <div class="hero-inner">
       <span class="hero-kicker">Devotion made easy</span>
-      <h1>Pooja hua <span style="font-weight:700;">easy</span></h1>
+      <h1>Pooja <span style="font-weight:700;">ସହଜ ହେଲା</span></h1>
       <p class="hero-sub">33Crores — the complete puja & flower subscription platform for every home.</p>
 
       <div class="hero-art" aria-hidden="true">
