--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
   <!-- HERO (like the screenshot) -->
   <section class="hero">
     <div class="hero-inner">
-      <span class="hero-kicker">Devotion made easy</span>
+      <span class="hero-kicker">Devotion Made Easy</span>
       <h1>Pooja <span style="font-weight:700;">ସହଜ ହେଲା</span></h1>
-      <p class="hero-sub">33Crores — the complete puja & flower subscription platform for every home.</p>
+      <p class="hero-sub">33Crores — the complete flower subscription and puja platform for every home.</p>
 
       <div class="hero-art" aria-hidden="true">
         <img src="img/essentialimg/flower-delivery.jpg" alt="Illustration of devotees receiving fresh flowers" />
