--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     .app-badge img {
       display: block;
       width: 180px;
-      height: auto
+      height: 100%;
     }
 
     .cta-text {
