--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
     <div class="hero-inner">
       <span class="hero-kicker">Devotion made easy</span>
       <h1>Pooja <span style="font-weight:700;">ସହଜ ହେଲା</span></h1>
-      <p class="hero-sub">33Crores — the complete puja & flower subscription platform for every home.</p>
+      <p class="hero-sub">33Crores — the complete flower subscription & puja platform for every home.</p>
 
       <div class="hero-art" aria-hidden="true">
         <img src="img/essentialimg/flower-delivery.jpg" alt="Illustration of devotees receiving fresh flowers" />
@@ -388,7 +388,7 @@
     <div class="cta-wrap">
       <div class="cta-card">
         <div class="cta-inner">
-          <h2 class="cta-heading">Download the App</h2>
+          <h2 class="cta-heading">Download the App to place an order</h2>
           <div class="badge-row">
             <a class="app-badge" href="https://play.google.com/store/apps/details?id=com.thirtythreecroresapp&hl=en"
               target="_blank" rel="noopener noreferrer" aria-label="Get it on Google Play">
@@ -400,8 +400,8 @@
             </a>
           </div>
           <div class="cta-text">
-            Over <b>1000+ devotees</b> already receive flowers at home and get reminders. Start now to manage pooja
-            <span class="cta-em">3× easier</span>!
+            Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples get reminders. Subscribe now to get
+            <span class="cta-em">Home Delivery Every Morning</span>!
           </div>
         </div>
       </div>
