--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </a>
           </div>
           <div class="cta-text">
-            Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples get reminders. Subscribe now to get
+            Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
             <span class="cta-em">Home Delivery Every Morning</span>!
           </div>
         </div>
