--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       <p class="hero-sub">33Crores — the complete flower subscription & puja platform for every home.</p>
 
       <div class="hero-art" aria-hidden="true">
-        <img src="img/essentialimg/flower-delivery.jpg" alt="Illustration of devotees receiving fresh flowers" />
+        <img src="img/banner.jpg" alt="Illustration of devotees receiving fresh flowers" />
       </div>
     </div>
 
