--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       border: 1px solid var(--border);
       border-radius: 22px;
       box-shadow: var(--shadow);
-      padding: 18px 16px
+      padding: 32px 16px
     }
 
     .cta-inner {
@@ -239,7 +239,8 @@
 
       .cta-card {
         padding: 14px 12px;
-        border-radius: 18px
+        border-radius: 18px;
+        width: 90%;
       }
 
       .cta-heading {
