--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
               <img src="img/ios.png" alt="Download on the App Store">
             </a>
           </div>
-          <div class="cta-text">
+          <!-- <div class="cta-text">
             Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
             <span class="cta-em">Home Delivery Every Morning</span>!
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
