--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     <div class="cta-wrap">
       <div class="cta-card">
         <div class="cta-inner">
-          <h2 class="cta-heading">Download the App to place an order</h2>
+          <h2 class="cta-heading">Download the App to Order</h2>
           <div class="badge-row">
             <a class="app-badge" href="https://play.google.com/store/apps/details?id=com.thirtythreecroresapp&hl=en"
               target="_blank" rel="noopener noreferrer" aria-label="Get it on Google Play">
@@ -400,13 +400,15 @@
               <img src="img/ios.png" alt="Download on the App Store">
             </a>
           </div>
-          <!-- <div class="cta-text">
-            Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
-            <span class="cta-em">Home Delivery Every Morning</span>!
-          </div> -->
+        
         </div>
       </div>
     </div>
+
+      <div class="cta-text">
+            Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
+            <span class="cta-em">Home Delivery Every Morning</span>!
+          </div>
   </section>
 
   <!-- Footer -->
