--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
 
     .cta-text {
       font-size: clamp(15px, 2vw, 18px);
-      color: #2a2a2a
+      color: #2a2a2a;
+       margin: 8px auto 0;
+      max-width: 680px;
     }
 
     .cta-text b {
@@ -408,7 +410,7 @@
       <div class="cta-text">
             Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
             <span class="cta-em">Home Delivery Every Morning</span>!
-          </div>
+      </div>
   </section>
 
   <!-- Footer -->
