--- a/index.html
+++ b/index.html
@@ -406,11 +406,12 @@
         </div>
       </div>
     </div>
-
-      <div class="cta-text">
-            Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
-            <span class="cta-em">Home Delivery Every Morning</span>!
-      </div>
+  <div class="hero-inner">
+      <p class="hero-sub">
+       Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
+            <span class="cta-em">Home Delivery Every Morning</span>!</p>p>
+    </div>
+   
   </section>
 
   <!-- Footer -->
