--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   <div class="hero-inner">
       <p class="hero-sub">
        Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
-            <span class="cta-em">Home Delivery Every Morning</span>!</p>p>
+            <span class="cta-em">Home Delivery Every Morning</span>!</p>
     </div>
    
   </section>
