--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'G-Y4JX56QJKP');</script>
   <style>
     :root {
       --maxw: 1200px;
@@ -199,7 +206,7 @@
     .cta-text {
       font-size: clamp(15px, 2vw, 18px);
       color: #2a2a2a;
-       margin: 8px auto 0;
+      margin: 8px auto 0;
       max-width: 680px;
     }
 
@@ -402,16 +409,18 @@
               <img src="img/ios.png" alt="Download on the App Store">
             </a>
           </div>
-        
+
         </div>
       </div>
     </div>
-  <div class="hero-inner">
+    <div class="hero-inner">
       <p class="hero-sub">
-       Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to get
-            <span class="cta-em">Home Delivery Every Morning</span></p><br><br><br>
+        Over <b>1000+ devotees</b> already receive pooja flowers at home, business place and temples. Subscribe now to
+        get
+        <span class="cta-em">Home Delivery Every Morning</span>
+      </p><br><br><br>
     </div>
-   
+
   </section>
 
   <!-- Footer -->
@@ -471,7 +480,7 @@
             <img src="img/google.png" alt="Get it on Google Play" />
           </a>
           <a class="app-badge" href="https://apps.apple.com/in/app/33-crores/id6443912970" target="_blank"
-            rel="noopener noreferrer" aria-label="Download on the App Store"  style="width: 150px">
+            rel="noopener noreferrer" aria-label="Download on the App Store" style="width: 150px">
             <img src="img/ios.png" alt="Download on the App Store" />
           </a>
         </div>
@@ -495,6 +504,10 @@
     <img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1297902044836474&ev=PageView&noscript=1" alt="" />
   </noscript>
+
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-Y4JX56QJKP" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+
 </body>
 
 </html>
